Fixed service impl. Successful build